--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
 
-#??? ????
+#파일 업로드
 imgUploadLocation = C:/salad/product/
 uploadPath = file:///C:/salad/
 
